Removed cart drawer component
Changes to be committed:
	modified:   app/(root)/checkout/page.tsx
     - some minor UI design Changes

	modified:   app/(root)/products/page.tsx
     - implement mobile version change category button

	modified:   app/(root)/products/product-details/page.tsx
     - minor UI changes
	new file:   app/(root)/profile/page.tsx
     - added new page

	modified:   app/globals.css
     - changed scrollbar styles

	modified:   components/CustomButton.tsx
	modified:   components/Navbar.tsx
     - removed cart drawer component and now it links to checkout page insted

	modified:   constants/mock-data.ts
     - new data added from checkout page

	new file:   public/delete.svg

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer components {
+  
   .container-x-padding {
     @apply px-10 sm:px-10 md:px-10 lg:px-20 xl:px-20;
   }
@@ -28,6 +30,27 @@
 }
 
 @layer base {
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: hsl(88, 38%, 15%);
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #606c38;
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
